src/objects/Account_Rating__c.object
<CustomObject>
    <fields>
        <fullName>account_id__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Ratings</relationshipLabel>
        <relationshipName>Account_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>qualitative_rating_number__c</fullName>
        <label>Qualitative score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quantitative_rating_number__c</fullName>
        <label>Quantitative score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rating_class_type__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rating_period__c</fullName>
        <formula>TEXT(YEAR(year_month_day_date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rating_scale_type__c</fullName>
        <label>Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_rating_score_number__c</fullName>
        <label>Total score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>year_month_day_date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Rating</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account_id__c</columns>
        <columns>year_month_day_date__c</columns>
        <columns>rating_class_type__c</columns>
        <columns>rating_scale_type__c</columns>
        <columns>qualitative_rating_number__c</columns>
        <columns>quantitative_rating_number__c</columns>
        <columns>total_rating_score_number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ARG-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>